# rf-trap-inverse

./: .gitignore  AGENTS.md  Data.txt  README.md  SPEC.md  app_inverse_model_tk.py  pyproject.toml
docs/: ARTICLE_ML_METHODS_RU.md  DATASET_FORMAT.md  ERROR_ANALYSIS_MERGED_29995.md  LEARNING_CURVE_MERGED_29995.md  MERGED_DATASET_29995_RESULTS.md  MERGED_DATASET_51974_RESULTS.md  MILESTONE_1_RESULTS.md  MILESTONE_2_RESULTS.md  MILESTONE_3_RESULTS.md  MILESTONE_4_RESULTS.md  MILESTONE_5_RESULTS.md  MILESTONE_6_RESULTS.md  MILESTONE_7_RESULTS.md  MILESTONE_8_RESULTS.md  MILESTONE_9_RESULTS.md  N20000_RESULTS.md  N5000_RESULTS.md  NUMERICAL_ASSUMPTIONS.md  PREDICTION_EXPORTS.md  PROJECT_STATUS.md  REFERENCE_ARTICLE_NOTES.md  USING_INVERSE_MODEL.md
docs/article/: ml_methods_ru.docx
docs/figures/: README.md  article_fem_connections_metadata.json  generate_article_figures.py
examples/: example_minima_input.csv  run_one_configuration.py
scripts/: make_semen_ready_dataset.py
src/rf_trap_forward/: __init__.py  _basis_fit_worker.py  _calibrated_worker.py  _fem_audit_worker.py  _minima_mode_worker.py  _reference_validation_worker.py  _validation_worker.py  absolute_validation.py  calibrated_validation.py  candidate_diagnostics.py  cli.py  closed_loop_comparison.py  closed_loop_inverse.py  config.py  dataset.py  dataset_qa.py  demo.py  error_analysis.py  export_prediction_dataset.py  field.py  forward.py  geometry.py  hypothesis_validation.py  inverse_model_artifacts.py  inverse_training.py  inverse_training_v2.py  learning_curve.py  merge_datasets.py  mesh.py  minima.py  minima_modes.py  numerical_audit.py  predict_inverse.py  real_scale.py  reference_validation.py  robust_validation.py  row5_debug.py  scale_validation.py  solver.py  synthetic_dataset.py  (+2 more)
tests/: conftest.py  test_analysis_reporting.py  test_calibrated_validation.py  test_candidate_diagnostics.py  test_closed_loop_comparison.py  test_closed_loop_inverse.py  test_dataset.py  test_dataset_qa.py  test_export_prediction_dataset.py  test_field.py  test_forward.py  test_geometry.py  test_hypothesis_validation.py  test_inverse_training.py  test_inverse_training_v2.py  test_merge_datasets.py  test_mesh_solver.py  test_minima_modes.py  test_numerical_audit.py  test_predict_inverse.py  test_real_scale.py  test_reference_validation.py  test_robust_validation.py  test_row5_debug.py  test_scale_validation.py  test_synthetic_dataset.py  test_validation.py  test_verify_export_row_fem.py  test_wolfram_validation.py
validation_results/absolute_displacement_check/: per_row.csv  report.md  summary.csv
validation_results/closed_loop_inverse_20000_n100/: README.md  closed_loop_results.csv  summary.json
validation_results/closed_loop_inverse_20000_n50/: README.md  closed_loop_results.csv  summary.json
validation_results/closed_loop_inverse_5000_n20/: README.md  closed_loop_results.csv  summary.json
validation_results/closed_loop_inverse_5000_n50/: README.md  closed_loop_results.csv  summary.json
validation_results/closed_loop_inverse_merged_29995_n100/: README.md  closed_loop_results.csv  summary.json
validation_results/closed_loop_inverse_merged_51974_n100/: README.md  closed_loop_results.csv  summary.json
validation_results/error_analysis_merged_29995/: README.md  analysis_summary.json  closed_loop_case_metrics.csv  closed_loop_error_stats.csv  per_coordinate_error_stats.csv  per_electrode_error_stats.csv  relationship_stats.csv  worst_10_closed_loop_cases.csv
validation_results/export_row_fem_debug/: row_index_0_report.md  row_index_1_report.md  row_index_2_report.md  summary.csv
validation_results/generated_dataset/: README.md  synthetic_clean.csv  synthetic_summary.json
validation_results/generated_dataset_20000/: README.md  progress.json  synthetic_summary.json
validation_results/generated_dataset_20000_qa/: qa_report.md  summary_stats.csv
validation_results/generated_dataset_5000/: README.md  (+3 more)
(+118 files in other folders)
