[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "rf-trap-forward"
version = "0.8.0"
description = "A tested RF-trap forward model with convergence and reference benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gmsh>=4.13,<5",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "scikit-fem>=11,<13",
    "scipy>=1.13,<2",
]

[project.scripts]
rf-trap-convergence = "rf_trap_forward.cli:main"
rf-trap-investigate-extra-candidate = "rf_trap_forward.candidate_diagnostics:main"
rf-trap-reference-dataset = "rf_trap_forward.dataset:main"
rf-trap-reference-validation = "rf_trap_forward.reference_validation:main"
rf-trap-scale-validation = "rf_trap_forward.scale_validation:main"
rf-trap-hypothesis-validation = "rf_trap_forward.hypothesis_validation:main"
rf-trap-fem-audit = "rf_trap_forward.numerical_audit:main"
rf-trap-robust-minima-validation = "rf_trap_forward.robust_validation:main"

[project.optional-dependencies]
test = ["pytest>=8.3,<10"]

[tool.hatch.build.targets.wheel]
packages = ["src/rf_trap_forward"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
