[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "rf-trap-forward"
version = "0.12.1"
description = "A tested RF-trap forward model with convergence and reference benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gmsh>=4.13,<5",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "scikit-fem>=11,<13",
    "scikit-learn>=1.5,<2",
    "scipy>=1.13,<2",
]

[project.scripts]
rf-trap-convergence = "rf_trap_forward.cli:main"
rf-trap-investigate-extra-candidate = "rf_trap_forward.candidate_diagnostics:main"
rf-trap-reference-dataset = "rf_trap_forward.dataset:main"
rf-trap-reference-validation = "rf_trap_forward.reference_validation:main"
rf-trap-scale-validation = "rf_trap_forward.scale_validation:main"
rf-trap-hypothesis-validation = "rf_trap_forward.hypothesis_validation:main"
rf-trap-fem-audit = "rf_trap_forward.numerical_audit:main"
rf-trap-robust-minima-validation = "rf_trap_forward.robust_validation:main"
rf-trap-calibrated-validation = "rf_trap_forward.calibrated_validation:main"
rf-trap-absolute-displacement-check = "rf_trap_forward.absolute_validation:main"
rf-trap-wolfram-convention-check = "rf_trap_forward.absolute_validation:wolfram_main"
rf-trap-wolfram-row5-debug = "rf_trap_forward.row5_debug:main"
rf-trap-generate-dataset = "rf_trap_forward.synthetic_dataset:main"
rf-trap-audit-dataset = "rf_trap_forward.dataset_qa:main"
rf-trap-train-inverse = "rf_trap_forward.inverse_training:main"
rf-trap-closed-loop-inverse = "rf_trap_forward.closed_loop_inverse:main"
rf-trap-train-inverse-v2 = "rf_trap_forward.inverse_training_v2:main"
rf-trap-compare-closed-loop-inverse = "rf_trap_forward.closed_loop_comparison:main"

[project.optional-dependencies]
test = ["pytest>=8.3,<10"]

[tool.hatch.build.targets.wheel]
packages = ["src/rf_trap_forward"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
